# practice

./: .gitignore  AI_WORKFLOW.md  Makefile  README.md  build.sh  main.py  pyproject.toml
task1-testing/: main.py
task1-testing/tests/: test_main.py  test_performance.py
task1_testing/tests/: test_main.py
task2-documentation/: README.md
task3-unknown-language/: go.mod  main.go  tasks.db
