[project]
name = "practice"
authors = [
    {name = "Ivan Foksha", email = "v.foksh6@gmail.com"},
    {name = "Cursor"},
    {name = "Grok"}
]
version = "0.1.0"
description = "Practice tasks with AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
